# WeLD

./: .clang-format  .gitignore  README.md  pyproject.toml  setup.py
examples/AstalAuth/: config.py  doc.md  index.html
examples/AstalBattery/: config.py  doc.md  index.html
examples/AstalBluetooth/: config.py  index.html
examples/AstalHyprland/: config.py  index.html
examples/AstalMpris/: config.py  index.html
examples/AstalNetwork/: config.py  index.html
examples/AstalNotifd/: config.py  index.html
examples/AstalTray/: config.py  index.html
examples/AstalWp/: config.py  index.html
examples/Cava/: config.py  index.html
examples/Tray/: config.py  index.html
weld/: Hyprlang.py  __init__.py  __main__.py  cli.py  log.py
weld/c/: install.py  weld-sender.c
weld/constants/: __init__.py
weld/core/: __init__.py  widget.py
weld/gi-stubs/gi/: __init__.pyi
weld/gi-stubs/gi/repository/: Astal.pyi  AstalApps.pyi  AstalAuth.pyi  AstalBattery.pyi  AstalBluetooth.pyi  AstalCava.pyi  AstalGreet.pyi  AstalHyprland.pyi  AstalMpris.pyi  AstalNetwork.pyi  AstalNotifd.pyi  AstalTray.pyi  AstalWp.pyi  GtkLayerShell.pyi  WebKit2.pyi
weld/gi_modules/: __init__.py
weld/services/: AstalAppsService.py  AstalAuthService.py  AstalBatteryService.py  AstalBluetoothService.py  AstalHyprlandService.py  AstalMprisService.py  AstalNetworkService.py  AstalNotifdService.py  AstalTrayService.py  AstalWpService.py  CavaService.py  TrayService.py  __init__.py  base.py
weld/type/: __init__.py  cli.py  loader.py  payload.py
weld/utils/: __init__.py  data_fetching.py  get_apps.py
weld/web/: inputMask.js  syncDimensions.js
