[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"weld" = ["web/**/*"]

[project]
name = "WeLD"
version = "0.1.0"
description = "Web Layered Display"
authors = [{ name = "Rohit", email = "rohitmalik987789@gmail.com" }]
dependencies = [
    "PyGObject",
    "pydantic",
    "loguru",
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["weld*"]

[project.scripts]
weldctl = "weld.cli:main"
weld = "weld:main"
