[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WeLD"
version = "0.1.0"
description = "Web Layered Display"
authors = [{ name = "Rohit", email = "rohitmalik987789@gmail.com" }]
dependencies = [
    "PyGObject",
    "pydantic",
    "loguru",
    "dbus-python",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black",
]

[tool.setuptools]
packages = ["weld"]

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true

[project.scripts]
weldctl = "weld.cli:main"
weld = "weld:main"
