[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"weld" = [
    "web/**/*",
    "bin/weld-sender",
]

[project]
name = "WeLD"
version = "0.1.0"
description = "Web Layered Display"
authors = [{ name = "Rohit", email = "rohitmalik987789@gmail.com" }]
dependencies = [
    "PyGObject",
    "pydantic",
    "loguru",
    "dbus-python",
]
requires-python = ">=3.8"


[project.optional-dependencies]
dev = [
    "black",
    "pygobject-stubs",
]

[tool.setuptools.packages.find]
include = ["weld*"]

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true

[tool.pyright]
stubPath = "weld/gi-stubs"
reportMissingModuleSource = false
extraPaths = [
    "venv/lib/python3.13/site-packages/gi-stubs"
]

[project.scripts]
weldctl = "weld.cli:main"
weld = "weld:main"
